fix: fix the sticky filter bar from causing an overflow on mobile devices

--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -67,6 +67,10 @@
   white-space: nowrap;
 }
 
+.overflowXClip {
+  overflow-x: clip;
+}
+
 .grid {
   --min: 300px;
 
